CDDecorator: CopyCreator as a decorator & ordering fixes